--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "Other"
   ],
   "activationEvents": [
-    "onCommand:vsc-labeled-bookmarks.toggleBookmark"
+    "*"
   ],
   "main": "./out/extension.js",
   "contributes": {
@@ -18,6 +18,13 @@
       {
         "command": "vsc-labeled-bookmarks.toggleBookmark",
         "title": "Bookmarks: toggle bookmark"
+      }
+    ],
+    "keybindings": [
+      {
+        "command": "vsc-labeled-bookmarks.toggleBookmark",
+        "key": "alt+shift+m",
+        "when": "editorTextFocus"
       }
     ]
   },
