--- a/package.json
+++ b/package.json
@@ -24,6 +24,10 @@
         "title": "Bookmarks: toggle labeled bookmark"
       },
       {
+        "command": "vsc-labeled-bookmarks.navigateToBookmark",
+        "title": "Bookmarks: navigate to bookmark"
+      },
+      {
         "command": "vsc-labeled-bookmarks.selectGroup",
         "title": "Bookmarks: select group"
       },
@@ -42,6 +46,10 @@
         "command": "vsc-labeled-bookmarks.toggleLabeledBookmark",
         "key": "ctrl+alt+l",
         "when": "editorTextFocus"
+      },
+      {
+        "command": "vsc-labeled-bookmarks.navigateToBookmark",
+        "key": "ctrl+alt+n"
       },
       {
         "command": "vsc-labeled-bookmarks.selectGroup",
