--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "labeled-bookmarks",
   "displayName": "Labeled Bookmarks",
   "description": "Bookmarks, multiple groups, customizable visuals",
-  "version": "1.1.6",
+  "version": "1.1.7",
   "publisher": "koalamer",
   "icon": "resources/vsc-labeled-bookmarks-logo.png",
   "repository": {
@@ -106,6 +106,11 @@
       {
         "command": "vsc-labeled-bookmarks.showTreeView",
         "title": "Bookmarks: show tree view"
+      },
+      {
+        "command": "vsc-labeled-bookmarks.editTreeItem",
+        "title": "Bookmarks: edit tree item",
+        "icon": "$(edit)"
       },
       {
         "command": "vsc-labeled-bookmarks.deleteTreeItem",
@@ -309,6 +314,11 @@
     },
     "menus": {
       "view/item/context": [
+        {
+          "command": "vsc-labeled-bookmarks.editTreeItem",
+          "when": "view == bookmarksByFile || view == bookmarksByGroup",
+          "group": "inline"
+        },
         {
           "command": "vsc-labeled-bookmarks.deleteTreeItem",
           "when": "view == bookmarksByFile || view == bookmarksByGroup",
