Remove misleading welcome text

--- a/package.json
+++ b/package.json
@@ -328,7 +328,7 @@
     "viewsWelcome": [
       {
         "view": "bookmarksByFile",
-        "contents": "Loading..."
+        "contents": ""
       },
       {
         "view": "bookmarksByGroup",
