--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "labeled-bookmarks",
   "displayName": "Labeled Bookmarks",
-  "description": "Bookmarks, multiple groups, customizable visuals",
+  "description": "Bookmarks, multiple groups, customizable visuals, import, export",
   "version": "1.1.13",
   "publisher": "koalamer",
   "icon": "resources/vsc-labeled-bookmarks-logo.png",
